# orion

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  run-debug.sh  run.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
background/: Cargo.toml
background/src/: hotkey.rs  main.rs  process.rs  setup.rs
popup_ui/: Cargo.toml
popup_ui/src/: commands.rs  main.rs  state.rs  ui.rs
settings_app/: Cargo.toml
settings_app/src/: app.rs  main.rs  profiles.rs  state.rs  ui.rs
shared/: Cargo.toml
shared/src/: config.rs  file_control.rs  ipc.rs  lib.rs  logging.rs  models.rs
workflow/: base.md  srs.md  tot.md
