[package]
name = "background"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
rdev = "0.5"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
chrono = "0.4"

