[package]
name = "settings_app"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
iced = { version = "0.12", features = ["tokio", "debug"] }
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
directories = "5.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
