[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
log = { version = "0.4", features = ["std"] }
validator = { version = "0.16", features = ["derive", "unic"] }
toml = "0.8"
chrono = "0.4"
